--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Run H266VideoConverter (venv)",
+            "name": "Run VidoEdit (venv)",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/main.py",
@@ -16,7 +16,7 @@
             "args": []
         },
         {
-            "name": "Run H266VideoConverter",
+            "name": "Run VidoEdit",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/main.py",
